--- a/src/components/BingoCard/BingoCard.css
+++ b/src/components/BingoCard/BingoCard.css
@@ -1,14 +1,54 @@
 .bingo-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 20px;
+  background-color: #cbb0f6;
+    /* background: -webkit-linear-gradient(90deg, pink, #c7cbe3); */
+  color: #232025;
+  margin: 5%;
+  border-radius: 25px;
+  width: fit-content;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11),
+  0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11),
+  0 16px 16px rgba(0, 0, 0, 0.11), 0 32px 32px rgba(0, 0, 0, 0.11);
 }
 
 .bingo-title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 10px;
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 400;
+}
+
+.bingo-inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.bingo-label {
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 2px;
+  margin: 10px 0;
+}
+select {
+  padding: 10px;
+    background: transparent;
+    border: none;
+       font-size: 20px;
+}
+
+input {
+      padding: 10px;
+    background: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px dotted;
+    font-size: 20px;
 }
 
 .bingo-grid {
@@ -25,11 +65,14 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 5px;
-  border: 2px solid #ddd;
+  border: 2px solid #ff9fc2;
   padding: 10px;
   background: white;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+  /* border-radius: 8px; */
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11),
+  0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11),
+  0 16px 16px rgba(0, 0, 0, 0.11), 0 32px 32px rgba(0, 0, 0, 0.11);
 }
 
 .bingo-cell {
@@ -38,39 +81,47 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #ccc;
-  background-color: #f8f9fa;
+  border: 1px solid #ff9fc2;
+  background-color: #faebe1;
   font-size: 1.2rem;
   font-weight: bold;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
   color: black;
 }
 
 .bingo-button {
   margin-top: 10px;
-  padding: 8px 16px;
-  font-size: 1rem;
-  font-weight: bold;
+  padding: 10px 30px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 2px;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 25px;
   cursor: pointer;
   transition: background 0.3s ease;
+  width: fit-content;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11),
+  0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11),
+  0 16px 16px rgba(0, 0, 0, 0.11), 0 32px 32px rgba(0, 0, 0, 0.11);
 }
 
 .bingo-button.generate {
-  background-color: #007bff;
+  background-color: #ff9fc2;
+  color: black;
 }
 
 .bingo-button.generate:hover {
-  background-color: #0056b3;
+  opacity: 0.8;
 }
 
 .bingo-button.print {
-  background-color: #28a745;
+  background-color:  #232025;
 }
 
 .bingo-button.print:hover {
-  background-color: #1e7e34;
+   opacity: 0.8;
 }
