--- a/src/components/BingoCard/BingoCard.css
+++ b/src/components/BingoCard/BingoCard.css
@@ -65,7 +65,7 @@ input {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 5px;
-  border: 2px solid #ff9fc2;
+  border: 2px solid #cbb0f6;
   padding: 10px;
   background: white;
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
@@ -76,23 +76,29 @@ input {
 }
 
 .bingo-cell {
-  width: 50px;
-  height: 50px;
+  width: 5vw;
+  height: 5vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #ff9fc2;
+  /* border: 1px solid #ff9fc2; */
   background-color: #faebe1;
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-size: 2em;
+  font-weight: 700;
   /* border-radius: 5px; */
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
   color: black;
+
+  @media screen and (max-width: 768px) {
+    width: 10vw;
+    height: 10vw;
+    
+  }
 }
 
 .bingo-button {
-  margin-top: 10px;
-  padding: 10px 30px;
+  margin-top: 20px;
+  padding: 15px 20px 12px 20px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 300;
@@ -120,6 +126,7 @@ input {
 
 .bingo-button.print {
   background-color:  #232025;
+  margin-bottom: 2rem;
 }
 
 .bingo-button.print:hover {
