--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ h1 {
   color:#cbb0f6;
   letter-spacing: 2px;
   margin: 0;
+    @media screen and (max-width: 768px) {
+    font-size: 30px;
+    
+  }
 }
 
 .App-header {
