--- a/src/components/BingoCard/BingoCard.css
+++ b/src/components/BingoCard/BingoCard.css
@@ -59,6 +59,12 @@ input {
   margin: 1rem;
   column-gap: 2rem;
   row-gap: 2rem;
+
+  @media screen and (max-width: 768px) {
+    column-gap: 1rem;
+    row-gap: 1rem;
+    margin: 0.5rem;
+  }
 }
 
 .bingo-card {
@@ -90,15 +96,16 @@ input {
   color: black;
 
   @media screen and (max-width: 768px) {
-    width: 10vw;
-    height: 10vw;
+    width: 8vw;
+    height: 8vw;
+    font-size: 1.2em;
     
   }
 }
 
 .bingo-button {
   margin-top: 20px;
-  padding: 15px 20px 12px 20px;
+  padding: 15px 20px 13px 20px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 300;
